--- a/src/main/resources/templates/records/edit.html
+++ b/src/main/resources/templates/records/edit.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8" />
     <title>editing record</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap-datepicker3.min.css" />
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap-datepicker.min.js"></script>
+    <script src="/js/main.js"></script>
   </head>
   <body>
     <div class="container">
       <h1>Editing Record</h1>
       <form th:action="@{/records/{id}(id=${record.id})}" th:method="put">
+        <div class="form-group">
+          <label class="control-laebl">Date</label>
+          <input class="js-use-datepicker form-control" type="text" name="date" th:value="${#dates.format(record.date, 'yyyy/MM/dd')}" />
+        </div>
         <div class="form-group">
           <label class="control-label">Name</label>
           <input class="form-control" type="text" name="name" th:value="${record.name}" />
