--- a/src/main/resources/templates/records/new.html
+++ b/src/main/resources/templates/records/new.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8" />
     <title>new record</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap-datepicker3.min.css" />
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap-datepicker.min.js"></script>
+    <script src="/js/main.js"></script>
   </head>
   <body>
     <div class="container">
       <h1>New Record</h1>
       <form action="/records" th:method="post">
+        <div class="form-group">
+          <label class="control-laebl">Date</label>
+          <input class="js-use-datepicker form-control" type="text" name="date" />
+        </div>
         <div class="form-group">
           <label class="control-laebl">Name</label>
           <input class="form-control" type="text" name="name" />
