カラムを増やした

--- a/bin/templates/records/edit.html
+++ b/bin/templates/records/edit.html
@@ -22,6 +22,26 @@
           <label class="control-label">Name</label>
           <input class="form-control" type="text" name="name" th:value="${record.name}" />
         </div>
+        <div class="form-group">
+          <label class="control-laebl">PA</label>
+          <input class="form-control" type="number" name="pa" th:value="${record.pa}" />
+        </div>
+        <div class="form-group">
+          <label class="control-laebl">Hit</label>
+          <input class="form-control" type="number" name="hit" th:value="${record.hit}" />
+        </div>
+        <div class="form-group">
+          <label class="control-laebl">RBI</label>
+          <input class="form-control" type="number" name="rbi" th:value="${record.rbi}" />
+        </div>
+        <div class="form-group">
+          <label class="control-laebl">BB</label>
+          <input class="form-control" type="number" name="bb" th:value="${record.bb}" />
+        </div>
+        <div class="form-group">
+          <label class="control-laebl">K</label>
+          <input class="form-control" type="number" name="k" th:value="${record.k}" />
+        </div>
         <button class="btn btn-default btn-xs" type="submit">Submit</button>
       </form>
       <div class="pull-right">
