--- a/src/main/resources/templates/records/new.html
+++ b/src/main/resources/templates/records/new.html
@@ -22,6 +22,26 @@
           <label class="control-laebl">Name</label>
           <input class="form-control" type="text" name="name" />
         </div>
+        <div class="form-group">
+          <label class="control-laebl">PA</label>
+          <input class="form-control" type="number" name="pa" />
+        </div>
+        <div class="form-group">
+          <label class="control-laebl">Hit</label>
+          <input class="form-control" type="number" name="hit" />
+        </div>
+        <div class="form-group">
+          <label class="control-laebl">RBI</label>
+          <input class="form-control" type="number" name="rbi" />
+        </div>
+        <div class="form-group">
+          <label class="control-laebl">BB</label>
+          <input class="form-control" type="number" name="bb" />
+        </div>
+        <div class="form-group">
+          <label class="control-laebl">K</label>
+          <input class="form-control" type="number" name="k" />
+        </div>
         <button class="btn btn-default btn-xs" type="submit">Submit</button>
       </form>
       <div class="pull-right">
