--- a/bin/templates/records/new.html
+++ b/bin/templates/records/new.html
@@ -15,31 +15,31 @@
       <h1>New Record</h1>
       <form action="/records" th:method="post">
         <div class="form-group">
-          <label class="control-laebl">Date</label>
+          <label class="control-laebl">試合日</label>
           <input class="js-use-datepicker form-control" type="text" name="date" />
         </div>
         <div class="form-group">
-          <label class="control-laebl">Name</label>
+          <label class="control-laebl">選手名</label>
           <input class="form-control" type="text" name="name" />
         </div>
         <div class="form-group">
-          <label class="control-laebl">PA</label>
+          <label class="control-laebl">打席</label>
           <input class="form-control" type="number" name="pa" />
         </div>
         <div class="form-group">
-          <label class="control-laebl">Hit</label>
+          <label class="control-laebl">安打</label>
           <input class="form-control" type="number" name="hit" />
         </div>
         <div class="form-group">
-          <label class="control-laebl">RBI</label>
+          <label class="control-laebl">打点</label>
           <input class="form-control" type="number" name="rbi" />
         </div>
         <div class="form-group">
-          <label class="control-laebl">BB</label>
+          <label class="control-laebl">四死球</label>
           <input class="form-control" type="number" name="bb" />
         </div>
         <div class="form-group">
-          <label class="control-laebl">K</label>
+          <label class="control-laebl">三振</label>
           <input class="form-control" type="number" name="k" />
         </div>
         <button class="btn btn-default btn-xs" type="submit">Submit</button>
