--- a/src/main/resources/templates/records/index.html
+++ b/src/main/resources/templates/records/index.html
@@ -13,14 +13,14 @@
       <table class="table">
         <thead>
           <tr>
-            <th>ID</th>
-            <th>Date</th>
-            <th>Name</th>
-            <th>PA</th>
-            <th>Hit</th>
-            <th>RBI</th>
-            <th>BB</th>
-            <th>K</th>
+            <th>#</th>
+            <th>試合日</th>
+            <th>選手名</th>
+            <th>打席</th>
+            <th>安打</th>
+            <th>打点</th>
+            <th>四死球</th>
+            <th>三振</th>
             <th></th>
             <th></th>
             <th></th>
