--- a/src/main/resources/templates/records/edit.html
+++ b/src/main/resources/templates/records/edit.html
@@ -8,7 +8,7 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/bootstrap-datepicker.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/js/record_form.js"></script>
   </head>
   <body>
     <div class="container">
